<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000"
        >
        <TextView
            android:id="@+id/level_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="3dp"
            android:background="@drawable/orange_textview"
            android:text="2048"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/score_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:background="@drawable/gray_button"
            android:gravity="center"
            android:text="@string/score"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/record_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:background="@drawable/gray_button"
            android:gravity="center"
            android:text="@string/record"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000">
        <TextView
            android:id="@+id/tv_level"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:gravity="center"
            android:background="@drawable/orange_textview"
            android:text="数字"
            android:textSize="25dp"/>
        <TextView
            android:id="@+id/tv_score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:background="@drawable/gray_button"
            android:gravity="center"
            android:text="10000"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/tv_record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:background="@drawable/gray_button"
            android:gravity="center"
            android:text="20000"
            android:textSize="20sp"
            />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/game_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/game_panel_r1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"/>
        </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000">
        <Button
            android:id="@+id/btn_revert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/blue_button"
            android:textColor="#0000FF"
            android:text="@string/revert"/>
        <Button
            android:id="@+id/btn_restart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:textColor="#0000FF"
            android:text="@string/restart"/>
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:textColor="#0000FF"
            android:text="@string/exit"/>
    </LinearLayout>
</LinearLayout>